...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/friend_detail_who_owe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:maxWidth="100dp"
                        android:singleLine="true"
...
        app:fontFamily="@font/chinese_one"
        app:layout_behavior="com.zoonref.SimpleViewBehavior"
        app:targetAlpha="1"
        app:targetY="-10dp" />

    <TextView
        android:id="@+id/friend_detail_clear_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rc_button_hollow"
...
