...
    <string name="split_it">Split It!</string>
    <string name="login_email">帳號 / Email</string>
    <string name="login_password">密碼</string>
    <string name="login_nick_name">暱稱</string>
    <string name="login_login">登入</string>
    <string name="login_registration">註冊</string>
    <string name="google_login">Google 登入</string>
    <string name="forget_password">忘記密碼</string>
    <string name="main_page">主頁面</string>
    <string name="spend_page">記帳頁面</string>
    <string name="split_page">拆帳頁面</string>
    <string name="quick_split_page">快速拆帳</string>
    <string name="change_style">切換主題</string>
...
    <string name="delete_friend_title">刪除好友</string>
    <string name="delete_friend_content">請問確定要刪除好友嗎?</string>
    <string name="delete_group_title">刪除群組</string>
    <string name="delete_group_content">請問確定要刪除群組嗎?</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="settle_up">結清帳務</string>
    <string name="pay">付給</string>
    <string name="yen">元</string>
    <string name="save">儲存</string>
    <string name="add_friend_to_new_group">增加好友進入群組</string>
    <string name="group_member">群組成員</string>
    <string name="group_name">群組名稱</string>
...
    <string name="overview">總覽</string>
    <string name="still_have">尚有</string>
    <string name="friend_still_have">朋友尚有</string>
    <string name="need_to_pay_you">筆帳務需支付你</string>
    <string name="you_need_to_pay">筆帳務須向朋友結清</string>
    <string name="group_overview">群組總覽</string>
    <string name="friend_overview">好友總覽</string>
    <string name="ntd_dollar">NTD :</string>
    <string name="split_detail">分帳細節</string>
    <string name="delete_event">刪除清單</string>
    <string name="person">人</string>
    <string name="people_amount">人數 :</string>
    <string name="not_include_tip">不含服務費</string>
...
