<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <include layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appBarLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/transparent">-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="20dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:title="@null"
        tools:background="@color/welcomeColor" />

    <TextView
        android:id="@+id/toolbarTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/quick_split_page"
        android:textSize="20sp"
        app:fontFamily="@font/chinese_one" />

    <FrameLayout
        android:id="@+id/fullPagePlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <!--</android.support.design.widget.AppBarLayout>-->


</android.support.design.widget.CoordinatorLayout>